--- a/templates/admin.html
+++ b/templates/admin.html
@@ -28,6 +28,9 @@
                         {% endif %}
                     </button>
                 </form>
+                <form action="{{ url_for('delete_user', user_id=user.id) }}" method="post">
+                    <button type="submit">削除</button>
+                </form>
             </td>
         </tr>
         {% endfor %}
