--- a/templates/index.html
+++ b/templates/index.html
@@ -276,8 +276,10 @@ document.addEventListener('DOMContentLoaded', function() {
             openModal(null, info.start, info.end);
             {% endif %}
         },
-        eventClick: function(info) {
-            openModal(info.event);
+        dateClick: function(info) {
+            {% if current_user.is_admin %}
+            openModal(null, info.date);
+            {% endif %}
         },
         eventDrop: function(info) {
             {% if current_user.is_admin %}
@@ -378,15 +380,19 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 
-    function openModal(event) {
+    function openModal(event, start, end) {
         document.getElementById("modalTitle").textContent = event ? "イベントの詳細" : "イベントの追加";
         document.getElementById("eventId").value = event ? event.id : '';
         document.getElementById("eventTitle").value = event ? event.title : '';
-        document.getElementById("eventStart").value = event ? event.start.toISOString().slice(0, 16) : '';
-        document.getElementById("eventEnd").value = event ? event.end.toISOString().slice(0, 16) : '';
+        // 当日の9時と12時を初期値に設定
+        start.setHours(18, 0, 0, 0);
+        document.getElementById("eventStart").value = event ? event.start.toISOString().slice(0, 16) : start.toISOString().slice(0, 16);
+        end.setHours(-3, 0, 0, 0);
+        document.getElementById("eventEnd").value = event ? event.end.toISOString().slice(0, 16) : end.toISOString().slice(0, 16);
         document.getElementById("eventLocation").value = event ? event.extendedProps.location || '' : '';
         document.getElementById("eventColor").value = event ? event.backgroundColor : '#3788d8';
-        
+        document.getElementById("eventLocation").value = event ? event.extendedProps.location || '' : '';
+        document.getElementById("eventColor").value = event ? event.backgroundColor : '#3788d8';
 
         var participantSection = document.getElementById("participantSection");
         var eventForm = document.getElementById("eventForm");
